--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/third-parties": "^15.0.3",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@next/third-parties": "^15.3.1",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.344.0",
-    "next": "^14.2.18",
+    "next": "^14.2.28",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-markdown": "^9.0.1",
-    "tailwind-merge": "^2.5.5",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^9.1.0",
+    "shiki": "^1.29.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.17.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^20.17.31",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.25.1",
     "eslint-config-next": "14.1.2",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "velite": "0.1.0-beta.11"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
