--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.28",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
