--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentful": "^11.5.22",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.28",
