--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.39.1",
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "@next/third-parties": "^15.3.1",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
