--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.39.1",
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "@next/third-parties": "^15.3.1",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
@@ -18,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentful": "^11.5.22",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.28",
