--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "contentful": "^11.5.22",
     "github-slugger": "^2.0.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.344.0",
     "next": "^14.2.28",
     "next-auth": "^4.24.11",
