--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "contentful": "^11.5.22",
     "github-slugger": "^2.0.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.344.0",
     "next": "^14.2.28",
     "next-auth": "^4.24.11",
@@ -34,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@contentful/rich-text-types": "^17.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.17.31",
     "@types/react": "^18.3.20",
