--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "contentful": "^11.5.22",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "html-react-parser": "^5.2.5",
     "lucide-react": "^0.344.0",
     "next": "^14.2.28",
     "next-auth": "^4.24.11",
